update the testimonial fold

--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@
 
     <!-- THIRD FOLD
     ================================================== -->
-    <section class="pt-8 pt-md-11 pb-10 pb-md-11 border-bottom bg-white">
+    <section class="pt-8 pt-md-11 pb-10 pb-md-11 bg-white">
 
       <!-- Content heading -->
       <div class="container">
@@ -1565,141 +1565,278 @@
 
     <!-- TESTIMONIAL
     ================================================== -->
-    <section class=" pt-9 pt-md-11 pb-11 bg-light">
+    <section data-jarallax data-speed=".8" class="pt-10 pb-12 pb-md-14 bg-primary jarallax">
       <div class="container">
         <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-7 text-center">
 
-          <div class="col-12 col-md-10 text-center">
-            <h2 class="display-4 font-weight-bold text-primary mb-2">
+            <!-- Headin -->
+            <h1 class="display-2 fw-bold text-white">
               Wall of love
-            </h2>
-  
-            <p class="mb-6 text-muted lead">
+            </h1>
+
+            <!-- Text -->
+            <p class="lead text-white-75 mb-4">
               Honest reviews from our customers
             </p>
-          </div>
 
-          <div class="col-12 col-md-10">
-  
-            <!-- Card -->
-            <div class="card card-row custom-rounded-testimonial shadow-lg">
-              <div class="row justify-content-center">
-
-                <div class="col-12 col-md-10 position-md-static">
-  
-                  <!-- Slider -->
-                  <div class="position-md-static"
-                    data-flickity='{"wrapAround": true, "pageDots": false, "adaptiveHeight": true}' id="blogSlider">
-
-                    <div class="w-100">
-  
-                      <!-- Body -->
-                      <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-  
-                          <!-- Text -->
-                          <p class="mb-5">
-                            “Honestly, it was great. Surprisingly simple to set up - didn't realise onboarding a tech could be that easy!”
-                          </p>
-  
-                          <!-- Footer -->
-                          <footer class="blockquote-footer mb-4">
-                            <span class="h6 text-uppercase">
-                              Fiadhnaid, CTO, BuddyEd
-                            </span>
-                          </footer>
-
-                          <img class="img-fluid" width="40" height="auto" alt="" src="assets/img/Misc/Buddy Ed logo.svg">
-  
-                        </blockquote>
-                      </div>
-  
-                    </div>
-
-                    <div class="w-100">
-  
-                      <!-- Body -->
-                      <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-
-                          <!-- Text -->
-                          <p class="mb-5">
-                            “Proxycurl is great. It has helped us grow faster.”
-                          </p>
-  
-                          <!-- Footer -->
-                          <footer class="blockquote-footer mb-4">
-                            <span class="h6 text-uppercase">
-                              Shani, Full Stack Dev, CleverX
-                            </span>
-                          </footer>
-
-                          <img class="img-fluid" width="128" height="auto" alt="" src="assets/img/Misc/Cleverx logo.svg">
-  
-                        </blockquote>
-                      </div>
-  
-                    </div>
-
-                    <div class="w-100">
-  
-                      <!-- Body -->
-                      <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-
-                          <!-- Text -->
-                          <p class="mb-5">
-                            “I'm really enjoying Proxycurl so far.”
-                          </p>
-  
-                          <!-- Footer -->
-                          <footer class="blockquote-footer mb-4">
-                            <span class="h6 text-uppercase">
-                              Shivam, Dev, Thatch
-                            </span>
-                          </footer>
-
-                          <img class="img-fluid" width="32" height="auto" alt="" src="assets/img/Misc/thatch-ai.svg">
-  
-                        </blockquote>
-                      </div>
-  
-                    </div>
-
-                    <div class="w-100">
-  
-                      <!-- Body -->
-                      <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-
-                          <!-- Text -->
-                          <p class="mb-5">
-                            “We've been using Proxycurl for a couple of months now and so far we've been really satisfied with it.”
-                          </p>
-  
-                          <!-- Footer -->
-                          <footer class="blockquote-footer mb-4">
-                            <span class="h6 text-uppercase">
-                              Roberts, CFO & COO, hyperjob
-                            </span>
-                          </footer>
-
-                          <img class="img-fluid" width="128" height="auto" alt="" src="assets/img/Misc/hyperjob.svg">
-  
-                        </blockquote>
-                      </div>
-  
-                    </div>
-
-                  </div>
-  
-                </div>
-
-              </div> <!-- / .row -->
-            </div>
-  
           </div>
         </div> <!-- / .row -->
+      </div> <!-- / .container -->
+    </section>
+
+    <!-- SHAPE -->
+    <div class="position-relative">
+      <div class="shape shape-bottom shape-fluid-x text-light">
+        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>      </div>
+    </div>
+
+    <!-- CONTENT -->
+    <section class="py-8 mt-n10 mt-md-n14 border-bottom">
+      <div class="container">
+        <div class="row" data-isotope='{"layoutMode": "masonry"}'>
+
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0">
+                  “Honestly, it was great. Surprisingly simple to set up - didn't realise onboarding a tech could be that easy!”
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Fiadhnaid
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      CTO
+                    </h6>
+                  </div>
+
+                  <div class="col-4 text-right">
+                    <img class="img-fluid" width="40" height="auto" alt="BuddyEd" src="assets/img/Misc/Buddy Ed logo.svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0 lead">
+                  “Proxycurl is great. It has helped us grow faster.”
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8 col-md-7">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Shani
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      Full Stack Dev
+                    </h6>
+                  </div>
+
+                  <div class="col-4 col-md-5 text-right">
+                    <img class="img-fluid" width="128" height="auto" alt="CleverX logo" src="assets/img/Misc/Cleverx logo.svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+          
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0 lead">
+                  “I'm really enjoying Proxycurl so far.”
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Shivam
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      Dev
+                    </h6>
+                  </div>
+
+                  <div class="col-4 text-right">
+                    <img class="img-fluid" width="32" height="auto" alt="Thatch ai logo" src="assets/img/Misc/thatch-ai.svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0">
+                  “We've been using Proxycurl for a couple of months now and so far we've been really satisfied with it.”
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8 col-md-7">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Roberts
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      CFO & COO
+                    </h6>
+                  </div>
+
+                  <div class="col-4 col-md-5 text-right">
+                    <img class="img-fluid" alt="hyperjob logo" src="assets/img/Misc/hyperjob.svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0">
+                  "Works great! Now I need to convince my leadership to let me buy a bunch of credits!"
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8 col-md-7">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Chris
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      Senior Solutions Architect
+                    </h6>
+                  </div>
+
+                  <div class="col-4 col-md-5 text-right">
+                    <img class="img-fluid" alt="Jasper.ai logo" src="assets/img/Misc/65fc7fc5f104846a5dcd451b_Jasper Logo (latest).svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-4 mb-6">
+
+            <div class="card shadow-light border">
+
+              <div class="card-body">
+
+                <p class="mb-0">
+                  "I like your pricing. Other LinkedIn solutions are aimed only at enterprise scale."
+                </p>
+
+              </div>
+
+              <div class="card-footer pt-0">
+
+                <!-- Divider -->
+                <hr class="card-meta-divider">
+
+                <div class="row align-items-center">
+
+                  <div class="col-8 col-md-7">
+                    <h6 class="text-uppercase font-weight-bold me-2 mb-1">
+                      Honza
+                    </h6>
+                    <h6 class="text-uppercase text-muted me-2 mb-0">
+                      Entrepreneur
+                    </h6>
+                  </div>
+
+                  <div class="col-4 col-md-5 text-right">
+                    <img class="img-fluid" width="64" height="auto" alt="Junior.guru logo" src="assets/img/Misc/junior-guru.svg">
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
       </div>
     </section>
 
