--- a/index.html
+++ b/index.html
@@ -1592,7 +1592,7 @@
     </div>
 
     <!-- CONTENT -->
-    <section class="py-8 mt-n10 mt-md-n14 border-bottom">
+    <section class="pt-11 pb-8 pt-md-0 pb-md-0 py-md-8 mt-n14 border-bottom">
       <div class="container">
         <div class="row" data-isotope='{"layoutMode": "masonry"}'>
 
