change the card heights

--- a/index.html
+++ b/index.html
@@ -1594,9 +1594,10 @@
     <!-- CONTENT -->
     <section class="pt-11 pb-8 pt-md-0 pb-md-0 py-md-8 mt-n14 border-bottom">
       <div class="container">
-        <div class="row" data-isotope='{"layoutMode": "masonry"}'>
+        <div class="row">
 
-          <div class="col-12 col-md-4 mb-6">
+          <!-- BuddyEd -->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1636,7 +1637,8 @@
 
           </div>
 
-          <div class="col-12 col-md-4 mb-6">
+          <!-- CleverX -->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1648,7 +1650,7 @@
 
               </div>
 
-              <div class="card-footer pt-0">
+              <div class="card-footer pt-0 mt-auto">
 
                 <!-- Divider -->
                 <hr class="card-meta-divider">
@@ -1676,7 +1678,8 @@
 
           </div>
           
-          <div class="col-12 col-md-4 mb-6">
+          <!-- Thatch Ai -->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1688,7 +1691,7 @@
 
               </div>
 
-              <div class="card-footer pt-0">
+              <div class="card-footer pt-0 mt-auto">
 
                 <!-- Divider -->
                 <hr class="card-meta-divider">
@@ -1716,7 +1719,8 @@
 
           </div>
 
-          <div class="col-12 col-md-4 mb-6">
+          <!-- hyperjob -->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1728,7 +1732,7 @@
 
               </div>
 
-              <div class="card-footer pt-0">
+              <div class="card-footer pt-0 mt-auto">
 
                 <!-- Divider -->
                 <hr class="card-meta-divider">
@@ -1756,7 +1760,8 @@
 
           </div>
 
-          <div class="col-12 col-md-4 mb-6">
+          <!-- Jasper AI -->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1796,7 +1801,8 @@
 
           </div>
 
-          <div class="col-12 col-md-4 mb-6">
+          <!-- Junior.guru-->
+          <div class="col-12 col-md-4 d-flex mb-6">
 
             <div class="card shadow-light border">
 
@@ -1808,7 +1814,7 @@
 
               </div>
 
-              <div class="card-footer pt-0">
+              <div class="card-footer pt-0 mt-auto">
 
                 <!-- Divider -->
                 <hr class="card-meta-divider">
