--- a/blog-tag.html
+++ b/blog-tag.html
@@ -999,10 +999,28 @@
           </div>
 
         </div> <!-- / .row -->
-        <br>
 
-        <hr>
-        <br>
+        <hr class="my-8">
+
+        <div class="text-center mb-4">
+
+          <h6 class="font-weight-bold text-uppercase text-gray-700">
+            Follow us
+          </h6>
+
+          <a class="" href="https://twitter.com/proxycurl" target="_blank">
+            <img class="img-fluid" width="48" height="auto" alt="Twitter X logo" src="assets/img/logos/twitter-x.svg">
+          </a>
+
+          <a class="" href="https://www.linkedin.com/company/proxycurl/" target="_blank">
+            <img class="img-fluid" width="40" height="auto" alt="LinkedIn logo" src="assets/img/logos/linkedin_logo_icon_181286.svg">
+          </a>
+
+          <a class="ml-2" href="https://www.youtube.com/@Proxycurl" target="_blank">
+            <img class="img-fluid" width="36" height="auto" alt="YouTube logo" src="assets/img/logos/YOUTUBE_icon-icons.com_65487.svg">
+          </a>
+
+        </div>
 
         <div class="text-center">
           <p class="caption">Nubela Pte Ltd. All rights reserved.</p>
