update social links on the footer

--- a/linkedin.html
+++ b/linkedin.html
@@ -1819,17 +1819,19 @@ curl \
             Follow us
           </h6>
 
-          <a class="" href="https://twitter.com/proxycurl" target="_blank">
-            <img class="img-fluid" width="48" height="auto" alt="Twitter X logo" src="assets/img/logos/twitter-x.svg">
-          </a>
-
-          <a class="" href="https://www.linkedin.com/company/proxycurl/" target="_blank">
-            <img class="img-fluid" width="40" height="auto" alt="LinkedIn logo" src="assets/img/logos/linkedin_logo_icon_181286.svg">
-          </a>
-
-          <a class="ml-2" href="https://www.youtube.com/@Proxycurl" target="_blank">
-            <img class="img-fluid" width="36" height="auto" alt="YouTube logo" src="assets/img/logos/YOUTUBE_icon-icons.com_65487.svg">
-          </a>
+          <div class="mr-2">
+            <a href="https://twitter.com/proxycurl" target="_blank">
+              <img class="img-fluid" width="48" height="auto" alt="Twitter X logo" src="assets/img/logos/twitter-x.svg">
+            </a>
+  
+            <a class="mr-2" href="https://www.youtube.com/@Proxycurl" target="_blank">
+              <img class="img-fluid" width="36" height="auto" alt="YouTube logo" src="assets/img/logos/YOUTUBE_icon-icons.com_65487.svg">
+            </a>
+  
+            <a href="https://github.com/nubelaco/" target="_blank">
+              <img class="img-fluid" width="30" height="auto" alt="Github logo" src="assets/img/logos/github-mark.svg">
+            </a>
+          </div>
 
         </div>
 
