--- a/contact-api.html
+++ b/contact-api.html
@@ -471,7 +471,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           </div>
 
           <p class="small text-center text-muted mt-6 mt-md-8 mb-0" data-aos="fade-up">Not a developer?
-            <a href="https://sapiengraph.com/" target="_blank" class="font-weight-bold text-success">
+            <a href="#SGPromo" class="font-weight-bold text-success">
               Try Sapiengraph<i class="neu-arrow"></i>
             </a>.
             Sapiengraph integrates Proxycurl APIs within Google Sheets.
@@ -784,6 +784,39 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
         </div> <!-- row -->
 
       </div> <!-- / .container -->
+    </section>
+
+    <!-- Sapiengraph promo -->
+    <section id="SGPromo" class="py-8 py-md-10 bg-success">
+
+      <div class="container">
+
+        <div class="row justify-content-center">
+
+          <div class="col-12 col-lg-9 text-center">
+
+            <div class="mb-6 px-md-8">
+              <h2 class="display-2 text-white font-weight-bold mb-2">
+                Get contact details of anyone in <span class="text-warning">Spreadsheets</span> 
+              </h2>
+  
+              <p class="text-white-80 lead">
+                Get personal phone numbers, work & personal email addresses, social media profiles using custom spreadsheet formulas.
+              </p>
+            </div>
+
+            <img class="img-fluid rounded mb-6" alt="Free Reverse Email Lookup Tool in Spreadsheets" src="Illustration_landscape_placement.png">
+
+            <a class="btn btn-white text-success lift" href="https://sapiengraph.com" target="_blank">
+              Try in this Google Sheet <i class="fe fe-arrow-right"></i>
+            </a>
+
+          </div>
+
+        </div>
+
+      </div>
+
     </section>
 
     <!-- PRICING
